--- a/src/Framework/PropellerMvcPresentation/Propeller.Mvc.Presentation.csproj
+++ b/src/Framework/PropellerMvcPresentation/Propeller.Mvc.Presentation.csproj
@@ -76,6 +76,7 @@
     <Compile Include="IPropellerTemplate.cs" />
     <Compile Include="PropellerViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PageEditStats.cs" />
     <Compile Include="TemplateRender.cs" />
   </ItemGroup>
   <ItemGroup>
