--- a/src/Framework/PropellerMvcPresentation/Propeller.Mvc.Presentation.csproj
+++ b/src/Framework/PropellerMvcPresentation/Propeller.Mvc.Presentation.csproj
@@ -99,6 +99,7 @@
     <Compile Include="TemplateRender.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
