--- a/src/Test/IntergrationTest/packages.config
+++ b/src/Test/IntergrationTest/packages.config
@@ -7,6 +7,7 @@
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.1.1" targetFramework="net452" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net452" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net452" />
   <package id="NSubstitute" version="2.0.3" targetFramework="net461" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net452" />
   <package id="Sitecore.FakeDb" version="1.7.0" targetFramework="net461" />
